<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtMotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motion_detected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/swipeUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_up"
        android:onClick="Up"
        app:layout_constraintBottom_toTopOf="@+id/txtMotion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/swipeDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_down"
        android:onClick="Down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMotion"
        tools:ignore="ExtraText,OnClick,UsingOnClickInXml" />

    <TextView
        android:id="@+id/txtPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_motion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMotion" />

</androidx.constraintlayout.widget.ConstraintLayout>